feat: add project expense entry, search views and update frontend screens